<resources>
    <string name="app_name">ErkinbekovBilimMonth_5_Dz_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="first_name_tv">First Name</string>
    <string name="you_ed">You</string>
    <string name="second_name_tv">Second Name</string>
    <string name="me_ed">Me</string>
    <string name="calculate_btn">Calculate</string>
    <string name="your_score">Your Score</string>
    <string name="score_tv">score</string>
    <string name="try_again">Try Again</string>
    <string name="get_started">Get Started</string>
    <string name="title">title</string>
    <string name="desc">desc</string>
    <string name="info">info</string>
    <string name="who">who</string>
    <string name="home">home</string>
    <string name="history">History</string>
</resources>