<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.score.LoveScoreFragment"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_heart"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textSize="40sp"
        android:textColor="@color/pink"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/tv_score"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_tv"
        android:textSize="25sp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name_tv"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_secondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name_tv"/>



    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:id="@+id/btn_tryAgain"
        android:backgroundTint="@color/pink"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:text="@string/history"
        android:textAllCaps="false"
        android:backgroundTint="@color/pink"
        android:layout_marginTop="30dp"/>



</LinearLayout>