<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculator.LoveCalculatorFragment"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_heart"
        android:layout_marginBottom="40dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_calculator"
        android:textColor="@color/pink"
        android:textSize="30sp"
        android:layout_gravity="start"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name_tv"
            android:layout_gravity="start"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/you_ed"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_name_tv"
            android:layout_gravity="start"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondNameEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/me_ed"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:text="@string/calculate_btn"
        android:textAllCaps="false"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/btn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:text="@string/history"
        android:textAllCaps="false"
        android:backgroundTint="@color/pink"
        android:layout_marginTop="30dp"/>


</LinearLayout>