<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="5dp">

        <TextView
            android:id="@+id/tv_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name_tv"
            android:layout_marginTop="45dp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_heart"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_arrow"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/tv_secondname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_name_tv" />

        <TextView
            android:id="@+id/tv_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_tv"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"/>

    </androidx.cardview.widget.CardView>



</LinearLayout>